# antifragile-flow

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  Polytope.yml  README.md  compose.yaml  git_commit_and_push.sh  nginx.conf  pyproject.toml  test_ai_agents.py
.github/workflows/: ci.yml
activity/: README.md  activities.py  document_activities.py  model_training_activities.py  organizational_learning_activities.py  research_activities.py  scheduler_activities.py  storage_activities.py
actor/: README.md
actor/ceo/: run_ceo.sh  starter.py
actor/shared/: base_persona.py  user_client.py
agent_activity/: README.md  __init__.py  ai_activities.py
agent_activity/core/: README.md  clarifying_agent.py  instruction_agent.py  pdf_generator_agent.py  research_manager.py  research_models.py  triage_agent.py  writer_agent.py
demo/: DEMO_INSTRUCTIONS.md  DEMO_SETUP.md  Makefile  README.md  Taglines.md  demo_runner.py  diagrams.md  globex_onboarding_demo.py  marp.config.js  package-lock.json  package.json  presentation.md  preso-temporal.md  run_users.sh  seed_conversations.py  user_client.py  users.json
demo/background-info/: AGENT_PORTFOLIO_ARCHITECTURE.md  AGENT_PORTFOLIO_SUMMARY.md  AGENT_SYSTEM_INTEGRATION.md  AI_AGENT_STANDARDS.md  ARCHITECTURE_RESTRUCTURE.md  CLAUDE.md  DNS_SETUP_GUIDE.md  DOCKER_CLOUD_GUIDE.md  DOCUMENTATION.md  DOMAIN_CONFIG.md  EXTRACT_FINE_TUNING.md  Guardian of Strategy Alignment.md  PROJECT_STATUS_SUMMARY.md  README.md  REPOSITORY_RESTRUCTURE_PLAN.md  SYSTEM_ARCHITECTURE_DIAGRAMS.md  TEMPORAL_INFRASTRUCTURE_STRATEGY.md  TEMPORAL_INTEGRATION.md
demo/demo-data/: bob.yaml  isac.yaml  john.yaml  mary.yaml  priya.yaml
demo/documents/: README.md
demo/slides/: presentation.html  preso-temporal.html
demo_datum/: sample_documents.py
doc/: ARCHITECTURE_VERIFICATION.md  HUMAN_IN_THE_LOOP.md  LOCAL_LLM_USAGE_RECOMMENDATIONS.md  MODEL_TRAINING_README.md  REORGANIZATION_SUMMARY.md  SHARED-CONFIG.md  TEST_AI_AGENTS.md  WORKER_ARCHITECTURE.md  Workflows.md  s3-setup.md
frontend/: .env.example  .eslintrc.json  Dockerfile  Makefile  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.css  App.tsx  index.tsx  routes.tsx  types.ts
model/: README.md
onboarding_ui/: main.py
onboarding_ui/templates/: index.html
python/: demo_model_comparison.py  test_trained_model_inference.py
python/src/: activities.py  worker.py  workflows.py
python/training_jobs/: train_globex-industrial_4568ba49.json  train_globex-industrial_e6164737.json  train_globex-industrial_e9399faf.json  train_globex-industrial_f1a8adda.json
script/: README.md  app-postgres-init.sql  copy_trained_model.py  create_users.py  migrate_hardcoded_values.py  migrate_to_neo4j.py  migrate_to_postgres.py  plot_workflows.py  reorganize_structure.py  seed_demo_inbox.py  test_connections.py  verify_rename.py
script/neo4j-init/: init.cypher
service/: README.md  clear_db.py  db_models.py  docker-compose.services.yml  model_training_service.py  neo4j_service.py  postgres_models.py
service/inbox/: db_inbox_service.py  human_input_handler.py  inbox_models.py  inbox_service.py  organizational_twin.py  user_profiles.py  users.py
service/organizational_twin/: organizational_twin.py
service/vector_store/: MULTI_TENANT_TODO.md  README.md  TESTING.md  __init__.py  compound_service.py  docker-compose.test.yml  neo4j_service.py  ports.py  run_all_tests.py  run_real_tests.py  setup_and_test.sh  test_compound_isolated.py  test_neo4j_isolated.py  test_real_compound.py  test_real_neo4j.py  test_real_weaviate.py  test_weaviate_isolated.py  weaviate_service.py
shared/: README.md  __init__.py  shared.py
shared/config/: GRAPHQL_SETUP.md  README.md  __init__.py  ai_config.py  database_config.py  defaults.py  graphql_config.py  makefile.config  settings.py
shared/models/: __init__.py  base.py  types.py
shared/prompts/: README.md  __init__.py  cli.py  loader.py  registry.py  templates.py
shared/temporal_client/: __init__.py  client.py  config.py
templates/: README.md.tpl
terraform/: main.tf  outputs.tf  variables.tf
test/: ceo_starter.py  document_starter.py  onboarding_with_training_starter.py  proper_separation_test.py  simple_test_starter.py  starter.py  starter_human.py  test_ai_agents.py  test_complete_workflow.py  test_document_processing_starter.py  test_enum_types_simple.py  test_enum_validation.py  test_globex_training.py  test_integrated_workflow.py  test_model_training.py  test_real_training.py  test_scheduler_starter.py  test_trained_model_inference.py  test_training_service.py  test_workflows.py  working_ml_demo.py
worker/: README.md  default_worker.py  main_worker.py  ml_worker.py  onboarding_worker.py  openai_worker.py  start_workers.sh
workflow/: README.md  daily_interaction_workflow.py  document_processing_workflow.py  interactive_research_workflow.py  organization_onboarding_workflow.py  research_bot_workflow.py  scheduler_workflow.py  workflows.py
(+110 files in other folders)
